RESOLVED FIXED268620
SVGStyleSheet tests fails while CSSOM passes on `StyleSheet_property_values`
https://bugs.webkit.org/show_bug.cgi?id=268620
Summary SVGStyleSheet tests fails while CSSOM passes on `StyleSheet_property_values`
Ahmad Saleem
Reported 2024-02-02 06:58:42 PST
Hi Team, While looking into WPT Test cases failure, I noticed that we fail `SVG` one while passing CSS one. So just raising so we can investigate and fix it. WPT Test Case (Live Link) - http://wpt.live/svg/styling/style-sheet-interfaces.svg WPT Test Case: https://wpt.fyi/results/svg/styling/style-sheet-interfaces.svg?label=master&label=experimental&aligned Thanks!
Attachments
Ahmad Saleem
Comment 2 2024-02-02 09:44:28 PST
We do fail on `ownerNode` and if I look into `CSSStyleSheet` Interface: https://drafts.csswg.org/cssom/#the-stylesheet-interface Web-Spec says: readonly attribute (Element or ProcessingInstruction)? ownerNode; While we have: readonly attribute Node ownerNode; ___ We don't have it nullable and also not taking ProcessingInstruction into account. I know in the past, I learnt that ProcessingInstruction is also node type. So it is covered by Node but I remember looking into Mozilla Firefox and Chromium / Blink and it was nullable at least.
Radar WebKit Bug Importer
Comment 3 2024-02-08 13:11:03 PST
Ahmad Saleem
Comment 4 2026-03-02 21:06:51 PST
EWS
Comment 5 2026-03-10 09:06:20 PDT
Committed 308980@main (f54bd14d6787): <https://commits.webkit.org/308980@main> Reviewed commits have been landed. Closing PR #59770 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.